<resources>
    <string name="app_name">suitmedia</string>
    <string name="name">Name</string>
    <string name="palindrom">Palindrom</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="palindromResult">is palindrom</string>
    <string name="palindromResult2">is not palindrom</string>
    <string name="result">result</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a user</string>
    <string name="userNothing">Enter a name first</string>
    <string name="email">Email</string>
</resources>